[ML] Fix layout issue with mixed charts with some having no entity fields.

--- a/x-pack/plugins/ml/public/explorer/explorer_charts/components/explorer_chart_label/styles/explorer_chart_label.less
+++ b/x-pack/plugins/ml/public/explorer/explorer_charts/components/explorer_chart_label/styles/explorer_chart_label.less
@@ -15,6 +15,9 @@
 /* only used when the field badges get wrapped to a new line */
 .ml-explorer-chart-label-fields {
   width: 100%;
+  /* use a fixed height to avoid layout issues when
+     only some charts don't have entity fields */
+  height: 22px;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
